--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 apply from : 'config.gradle'
 
 buildscript {
-    ext.kotlin_version = '1.2.30'
+    ext.kotlin_version = '1.2.41'
     repositories {
         google()
         jcenter()
@@ -20,6 +20,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven{
+            url = 'http://localhost:8081/repository/Router/'
+        }
     }
 }
 
