--- a/router/src/main/AndroidManifest.xml
+++ b/router/src/main/AndroidManifest.xml
@@ -6,14 +6,16 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true">
+
+        <!--外部使用路由进行跳转-->
         <activity android:name=".DispatcherActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
                 <category android:name="android.intent.category.DEFAULT"/>
-                <data android:scheme="http" android:host="www.waws.top"/>
-                <data android:scheme="https" android:host="www.waws.top"/>
-                <data android:scheme="router" android:host="www.waws.top"/>
+                <data android:scheme="http" android:host="www.thanatos.wanandroid.com"/>
+                <data android:scheme="https" android:host="www.thanatos.wanandroid.com"/>
+                <data android:scheme="router" android:host="thanatos.wanandroid"/>
             </intent-filter>
         </activity>
     </application>
