--- a/baselibrary/build.gradle
+++ b/baselibrary/build.gradle
@@ -29,13 +29,13 @@ android {
 }
 
 dependencies {
-    implementation rootProject.ext.fileTree
-    implementation rootProject.ext.kotlin_stdlib
+    api rootProject.ext.fileTree
+    api rootProject.ext.kotlin_stdlib
     testImplementation rootProject.ext.junit
     androidTestImplementation rootProject.ext.android_test
     androidTestImplementation rootProject.ext.espresso_core
-    implementation rootProject.ext.appcompat
-    implementation rootProject.ext.constraint_layout
+    api rootProject.ext.appcompat
+    api rootProject.ext.constraint_layout
     //router
     api project(':router')
     //permission
@@ -47,6 +47,6 @@ dependencies {
     implementation rootProject.ext.retrofit
     implementation rootProject.ext.retrofit_rxjava_adapter
     implementation rootProject.ext.rxAndroid
-    implementation rootProject.ext.rxJava
+    api rootProject.ext.rxJava
     implementation rootProject.ext.glide
 }
