--- a/config.gradle
+++ b/config.gradle
@@ -21,6 +21,7 @@ ext{
         espresso_core = 'com.android.support.test.espresso:espresso-core:3.0.2'
 
         appcompat = 'com.android.support:appcompat-v7:27.1.1'
+        design = 'com.android.support:design:27.1.1'
         constraint_layout = 'com.android.support.constraint:constraint-layout:1.1.1'
 
         //router
