--- a/router/build.gradle
+++ b/router/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     implementation rootProject.ext.appcompat
 
     api rootProject.ext.router_annotation
+
+    api project(':baseres')
 }
