--- a/baselibrary/build.gradle
+++ b/baselibrary/build.gradle
@@ -45,8 +45,10 @@ dependencies {
     implementation rootProject.ext.okhttp_log
     implementation rootProject.ext.gson
     implementation rootProject.ext.retrofit
+
     implementation rootProject.ext.retrofit_rxjava_adapter
     implementation rootProject.ext.rxAndroid
     api rootProject.ext.rxJava
     implementation rootProject.ext.glide
+    api rootProject.ext.design
 }
