--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,10 @@ android {
 }
 
 dependencies {
+    testImplementation rootProject.ext.junit
+    androidTestImplementation rootProject.ext.android_test
+    androidTestImplementation rootProject.ext.espresso_core
+
     api project(':baselibrary')
     api project(':mine')
     kapt rootProject.ext.router_compiler
