--- a/baseres/build.gradle
+++ b/baseres/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     androidTestImplementation rootProject.ext.android_test
     androidTestImplementation rootProject.ext.espresso_core
     implementation rootProject.ext.appcompat
+    implementation rootProject.ext.constraint_layout
 }
