--- a/baselibrary/build.gradle
+++ b/baselibrary/build.gradle
@@ -51,4 +51,8 @@ dependencies {
     api rootProject.ext.rxJava
     implementation rootProject.ext.glide
     api rootProject.ext.design
+
+    implementation 'jp.wasabeef:glide-transformations:3.3.0'
+    // If you want to use the GPU Filters
+    implementation 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
 }
