--- a/config.gradle
+++ b/config.gradle
@@ -43,6 +43,9 @@ ext{
 
         glide = 'com.github.bumptech.glide:glide:4.5.0'
 
+        glide_transformations = 'jp.wasabeef:glide-transformations:3.3.0'
+        gpuimage_library = 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
+
     }
 }
 
