--- a/mine/src/main/AndroidManifest.xml
+++ b/mine/src/main/AndroidManifest.xml
@@ -1,2 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.thanatos.mine" />
+    package="com.thanatos.mine">
+
+    <application>
+        <activity android:name=".mine.LoginActivity"></activity>
+    </application>
+
+</manifest>
