修改mvp架构和添加注册登录模块

--- a/mine/src/main/AndroidManifest.xml
+++ b/mine/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="com.thanatos.mine">
 
     <application>
-        <activity android:name=".mine.LoginActivity"></activity>
+        <activity android:name=".mine.login.LoginActivity" />
+        <activity android:name=".mine.register.RegisterActivity"></activity>
     </application>
 
 </manifest>
